# hri_face_detect-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  patches.conf  tracks.yaml
config/: 00-defaults.yml
hri_face_detect/: node_face_detect.py
launch/: face_detect.launch.py  face_detect_with_args.launch.py
module/: hri_face_detect_module.yaml
