<?xml version="1.0"?>
<package format="3">
  <name>hri_face_detect</name>
  <version>2.0.10</version>
  <description>Google Mediapipe-based face detection for ROS4HRI</description>
  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>
  <maintainer email="luka.juricic@pal-robotics.com">Luka Juricic</maintainer>
  <license>Apache License 2.0</license>
  <author email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</author>
  <author email="luka.juricic@pal-robotics.com">Luka Juricic</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>python_cmake_module</buildtool_depend>

  <build_depend condition="$PAL_DISTRO != ''">pal_module_cmake</build_depend>
  <build_depend>pybind11_vendor</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>hri_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_pal</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>

  <!-- PAL packages mediapipe as a debian. If the package is not available, use the standard ROS
  rosdep key (that install mediapipe via pip). 
  -->
  <exec_depend condition="$PAL_DISTRO != ''">python3-mediapipe</exec_depend>
  <exec_depend condition="$PAL_DISTRO == ''">python3-mediapipe-pip</exec_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-tk</exec_depend>
  <exec_depend>python3-transforms3d</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
